Fixed Alignment of Details in Order Details

--- a/css/admin_global.css
+++ b/css/admin_global.css
@@ -72,6 +72,9 @@ body {
   background-color: rgb(223, 232, 223);
   padding-left:5px;
 }
+.content-form tr td:nth-child(2) {
+  padding-left: 5px;
+}
 .content-form_label {
   width: 30%;
   padding-left: 5px;
